fix:去除多餘h1 container改wrap 寬度90% nav多indexNav

--- a/css/main.css
+++ b/css/main.css
@@ -75,12 +75,12 @@ h1 {
   width: 30%;
 }
 
-nav {
+nav.indexNav {
   width: 70%;
   float: right;
 }
 
-nav ul {
+nav.indexNav ul {
   color: #00cc99;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -92,7 +92,7 @@ nav ul {
   z-index: 30;
 }
 
-nav li {
+nav.indexNav li {
   margin: 15px 5px;
   padding: 10px;
   border-bottom: 3px rgba(0, 0, 0, 0) solid;
@@ -101,19 +101,19 @@ nav li {
           justify-content: flex-end;
 }
 
-nav li:hover {
+nav.indexNav li:hover {
   border-bottom: 3px #00cc99 solid;
 }
 
-nav a {
+nav.indexNav a {
   padding: 12px;
 }
 
-nav a:visited {
+nav.indexNav a:visited {
   color: #00cc99;
 }
 
-nav .dropDownOpen {
+nav.indexNav .dropDownOpen {
   width: calc(33.33333% + 12px);
   padding: 0;
   position: absolute;
@@ -168,14 +168,19 @@ nav .dropDownOpen {
   font-weight: normal;
 }
 
-.container .base-introduce {
+.wrap {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.wrap .base-introduce {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding: 2%;
 }
 
-.container .base-introduce .box {
+.wrap .base-introduce .box {
   width: 33.33%;
   text-align: center;
   margin: 20px;
@@ -186,36 +191,36 @@ nav .dropDownOpen {
           box-shadow: 0px 1px  3px #ccc;
 }
 
-.container .base-introduce img {
+.wrap .base-introduce img {
   width: 30%;
 }
 
-.container .base-introduce .bigPic {
+.wrap .base-introduce .bigPic {
   width: 80%;
   margin-bottom: 10px;
 }
 
-.container .base-introduce .title {
+.wrap .base-introduce .title {
   font-weight: bold;
 }
 
-.container .base-introduce .content {
+.wrap .base-introduce .content {
   margin-top: 10px;
   text-align: left;
 }
 
-.container .base-introduce .content ul {
+.wrap .base-introduce .content ul {
   position: relative;
   left: 20px;
 }
 
-.container .compareDifference {
+.wrap .compareDifference {
   width: 80%;
   margin: 0 auto;
   text-align: center;
 }
 
-.container .compareDifference table {
+.wrap .compareDifference table {
   text-align-last: left;
   width: 100%;
   margin-top: 10px;
@@ -224,30 +229,30 @@ nav .dropDownOpen {
   font-weight: 600;
 }
 
-.container .compareDifference table tr {
+.wrap .compareDifference table tr {
   width: 25%;
 }
 
-.container .compareDifference table th {
+.wrap .compareDifference table th {
   padding: 5px 20px;
 }
 
-.container .compareDifference table td {
+.wrap .compareDifference table td {
   height: 30px;
   padding: 5px 20px;
   border-top: 2px solid #e8e8e8;
   border-bottom: 2px solid #e8e8e8;
 }
 
-.container .compareDifference table thead {
+.wrap .compareDifference table thead {
   background-color: #f7f7f7;
 }
 
-.container .compareDifference .hexSchoolColor {
+.wrap .compareDifference .hexSchoolColor {
   color: #00cc99;
 }
 
-.container .contactInformation {
+.wrap .contactInformation {
   width: 80%;
   margin: 40px auto;
   padding: 10px;
@@ -257,14 +262,14 @@ nav .dropDownOpen {
   color: white;
 }
 
-.container .contactInformation .form {
+.wrap .contactInformation .form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-top: 20px;
 }
 
-.container .contactInformation .left {
+.wrap .contactInformation .left {
   width: 50%;
   height: 200px;
   background-color: #fff;
@@ -272,12 +277,12 @@ nav .dropDownOpen {
   border-radius: 5px;
 }
 
-.container .contactInformation .right {
+.wrap .contactInformation .right {
   width: 50%;
   text-align: left;
 }
 
-.container .contactInformation .right input {
+.wrap .contactInformation .right input {
   width: 100%;
   padding: 3px;
   margin-bottom: 10px;
@@ -285,7 +290,7 @@ nav .dropDownOpen {
   border-radius: 5px;
 }
 
-.container .contactInformation .right input[type="submit"] {
+.wrap .contactInformation .right input[type="submit"] {
   width: 18%;
   color: white;
   padding: 5px;
@@ -295,7 +300,7 @@ nav .dropDownOpen {
   float: right;
 }
 
-.container .contactInformation .right input[type="submit"]:hover {
+.wrap .contactInformation .right input[type="submit"]:hover {
   background-color: #00ffbf;
   -webkit-transition: .3s;
   transition: .3s;
